--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,27 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
 
-development:
+env: &env
+  host:     <%= ENV['DB_HOST'] %>
+  database: <%= ENV['DB_NAME'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  port:     <%= ENV['DB_PORT'] %>
+  
+development: &development
   <<: *default
-  database: db/development.sqlite3
+  <<: *env
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  <<: *env
+  database: <%= ENV['DB_NAME'] %>_test
+  timeout: 10000
+  pool: 10
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  pool: 100
+  url: <%= ENV['DATABASE_URL'] %>
